[gd_scene load_steps=3 format=3 uid="uid://bkhtqvl1ee32d"]

[ext_resource type="PackedScene" uid="uid://dkk1vhoxov7g2" path="res://ui/battle_prep_new/army_container/ArmyContainer.tscn" id="1_bw4vk"]
[ext_resource type="Script" path="res://ui/battle_prep_new/unit_selection/unit_selection.gd" id="1_kiljj"]

[node name="UnitSelection" type="HBoxContainer"]
script = ExtResource("1_kiljj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UnitSelectionHeader" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="UnitsLeftHeaderLabel" type="Label" parent="VBoxContainer/UnitSelectionHeader"]
layout_mode = 2
text = "Units Left"

[node name="UnitsLeftValueLabel" type="Label" parent="VBoxContainer/UnitSelectionHeader"]
layout_mode = 2
size_flags_horizontal = 10
text = "0/1"
horizontal_alignment = 2

[node name="ArmyContainer" parent="VBoxContainer" instance=ExtResource("1_bw4vk")]
layout_mode = 2

[connection signal="unit_panel_pressed" from="VBoxContainer/ArmyContainer" to="." method="_on_army_scroll_container_unit_panel_pressed"]
